# roguie

./: .gitignore  Cargo.toml  Sprite-0001.aseprite
resources/: menu_bg.xp  menu_bg_bw.xp  menu_bg_s.xp  sprite_1.aseprite
src/: components.rs  damage_system.rs  error.rs  gui.rs  hunger_system.rs  inventory_system.rs  main.rs  map.rs  map_indexing_system.rs  melee_combat_system.rs  monster_ai_system.rs  particle_system.rs  periodic_hiding_system.rs  player.rs  random_table.rs  rect.rs  rex_assets.rs  save_load_system.rs  ser.rs  spawner.rs  trigger_system.rs  visibility_system.rs
src/map_builders/: bsp_dungeon.rs  bsp_interior.rs  cellular_automata.rs  common.rs  mod.rs  simple_map.rs
wasm/: index.html  roguie_bg.wasm
