[package]
name = "roguie"
version = "0.1.0"
authors = ["Adam Whitehurst <Adam.Whitehurst@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { version = "0.8.0", features = ["serde"] }
specs = { version = "0.16.1", features = ["serde"] }
specs-derive = "0.4.1"
serde= { version = "1.0.93", features = ["derive"] }
serde_json = "1.0.39"
wasm-bindgen = "0.2.68"
wasm-bindgen-futures = "0.4.18"   
js-sys = "0.3.45"

[dependencies.web-sys]
version = "=0.3.45"
features = [
  'Blob',
  'File',
  'Storage',
  'Window',
]
